# docs/swagger/swagger_output.json
@@ -7,12 +7,21 @@
   },
   "host": "localhost:4000",
   "basePath": "/",
-  "schemes": [
-    "http"
+  "tags": [
+    {
+      "name": "Auth",
+      "description": "Autenticación"
+    },
+    {
+      "name": "Health",
+      "description": "Salud de la API"
+    }
   ],
+  "schemes": ["http"],
   "paths": {
     "/health": {
       "get": {
+        "tags": ["Health"],
         "description": "",
         "responses": {
           "200": {
@@ -23,6 +32,7 @@
     },
     "/api/auth/register": {
       "post": {
+        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
@@ -62,6 +72,7 @@
     },
     "/api/auth/login": {
       "post": {
+        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
@@ -95,6 +106,7 @@
     },
     "/api/auth/renew": {
       "post": {
+        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
