# src/routes/auth.routes.ts
@@ -9,8 +9,23 @@ import { validateJWT } from '../middlewares/validate-jwt.middleware.js'
 
 const authRouter: RouterType = Router()
 
-authRouter.post('/register', registerUser)
-authRouter.post('/login', loginUser)
-authRouter.post('/renew', validateJWT, renewJWT)
+authRouter.post(
+  '/register',
+  /* #swagger.tags = ['Auth']*/
+  registerUser,
+)
+
+authRouter.post(
+  '/login',
+  /* #swagger.tags = ['Auth']*/
+  loginUser,
+)
+
+authRouter.post(
+  '/renew',
+  /* #swagger.tags = ['Auth']*/
+  validateJWT,
+  renewJWT,
+)
 
 export default authRouter
